TAG: rvload-5-1-7-11
DATE: 05/12/2014
STAFF: sc
CHANGES: Feature Relationship project TR1560
1) Install - permissions for publish
2) publishRv - added

TAG: rvload-5-1-7-10
DATE: 04/04/2014
STAFF: sc
CHANGES: comments only

TAG: rvload-5-1-7-9
DATE: 03/13/2014
STAFF: sc
CHANGES:
1) Added check for no actual synonym value

TAG: rvload-5-1-7-8
DATE: 03/10/2014
STAFF: sc
CHANGES:
1) continue when no ':' in RV ID - don't try to split suffix/prefix

TAG: rvload-5-1-7-7
DATE: 03/10/2014
STAFF: sc
CHANGES:
1) Added checking of alt_id's

TAG: rvload-5-1-7-6
TAG: rvload-5-1-7-5
TAG: rvload-5-1-7-4
TAG: rvload-5-1-7-3
TAG: rvload-5-1-7-2
DATE: 03/07/2014
STAFF: sc
CHANGES:
1) added bin/runRvQC bin/rvQC.sh bin/rvQC.py
2) rvload.config.default - added OBO_FILE_VERSION=1.2
2) rvload.sh - added call to QC

TAG: rvload-5-1-7-1
DATE: 03/05/2014
STAFF: sc
CHANGES: TR11560 Feature Relationships