@@ -20,7 +20,6 @@ usage ()
 }
 
 LOADDIR=/usr/local/mgi/live/dataload/rvload
-#LOADDIR=/home/sc/work/dataload/rvload
 WRAPPER=${LOADDIR}/bin/rvQC.sh
 
 #
