@@ -1,9 +1,10 @@
 TAG: rvload-5-1-7-11
 DATE: 05/12/2014
 STAFF: sc
-CHANGES: Feature Relationship project TR1560
+CHANGES: Feature Relationship project TR1560 US29 Finalize
 1) Install - permissions for publish
 2) publishRv - added
+3) rvQC.sh, rvQC.py, rvload.sh - comments, etc
 
 TAG: rvload-5-1-7-10
 DATE: 04/04/2014
